Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-9751

ZFS snapshot doesn't work when using RSH

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • Lustre 2.12.0
    • Lustre 2.10.0
    • None
    • 3
    • 9223372036854775807

    Description

      build: b2_10 #2 tag-RC1

      When testing the ZFS Snapshot with Subdir Mount, I found that the lctl snapshot_* command only works with ssh, with rsh, it returns error. I have tried with both snapshot_create and list, both return the same error.

      with ssh:

      [root@onyx-69 ~]# lctl snapshot_list -d -F lustre --name test-snap
      Password: 
      
      filesystem_name: lustre
      snapshot_name: test-snap
      
      snapshot_role: MDT0000
      Password: 
      modify_time: Fri Jul  7 21:26:41 2017
      create_time: Fri Jul  7 21:26:41 2017
      snapshot_fsname: 55284e9 
      Password: 
      status: not mount
      
      snapshot_role: OST0000
      modify_time: Fri Jul  7 21:26:41 2017
      create_time: Fri Jul  7 21:26:41 2017
      snapshot_fsname: 55284e9 
      status: not mount
      

      try with same environment but with rsh option

      [root@onyx-69 ~]# lctl snapshot_list -d -F lustre --name test-snap -r rsh
      bash: zfs: command not found
      Can't list the snapshot test-snap
      [root@onyx-69 ~]# 
      

      The rsh did work between nodes.

      [root@onyx-69 ~]# rsh onyx-70
      Last login: Fri Jul  7 21:26:07 from onyx-69.onyx.hpdd.intel.com
      [root@onyx-70 ~]#
      

      Attachments

        Issue Links

          Activity

            People

              yong.fan nasf (Inactive)
              sarah Sarah Liu
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: